# rust-game-server-poc

./: .travis.yml  Cargo.toml  README.md  build.rs
proto/: echo.proto  gamemaster.proto
src/client/: client.rs  gclient.rs
src/server/: server.rs
