[package]
name = "rust-game-server-poc"
version = "0.1.0"
authors = ["Guillaume Eveillard"]
edition = "2018"

[dependencies]
pancurses = "0.16"
tonic = { version = "0.1.1", features = ["tls"] }
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }

piston_window = "0.107.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.31.0"
piston2d-sprite = "0.59.0"
image = "0.23.0"
piston2d-drag_controller = "0.29.0"
piston2d-deform_grid = "0.6.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.31.0"
rand = "0.6.0"
shader_version = "0.6.0"
uuid = "0.6.5"

[build-dependencies]
tonic-build = { version = "0.1.1" }

[[bin]]
name = "server"
path = "src/server/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[[bin]]
name = "gclient"
path = "src/client/gclient.rs"